# veridge

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  evaluation_report.md
.github/workflows/: ci.yml  release.yml
docs/: AGENT_PLAYBOOK.md  PROMPTS.md  graph-format.md
tests/: conftest.py  test_aliases.py  test_cli.py  test_doctor.py  test_export.py  test_fixes.py  test_freshness_store.py  test_impact.py  test_indexer.py  test_integrate.py  test_laravel.py  test_layers.py  test_model.py  test_parse.py  test_query.py  test_rank_budget.py  test_treesitter.py  test_viewer.py  test_walk.py  test_watch.py  test_why_tour.py
veridge/: __init__.py  __main__.py  aliases.py  budget.py  classify.py  cli.py  doctor.py  export.py  freshness.py  ignore.py  impact.py  indexer.py  integrate.py  laravel.py  layers.py  mcp_server.py  model.py  parse_docs.py  parse_python.py  query.py  rank.py  sessions.py  store.py  treesitter.py  viewer.py  walk.py  watch.py
veridge/ui/: template.html
